added new changes in these files

--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,22 @@
 @import "tailwindcss";
 
 
-/* colors : {
-    'primary': '#5f6FFF'                                     //36:43 in video
-} */  
 
-/* gridTemplateColums:{
-   'auto' : 'repeat(autofill, minmax(200px, 1fr))'          // 1:21 in video
-} */
- 
- /* Add this color later */
+/* Global Primary Color */
+@theme {
+  --color-primary: #5f6FFF;
+}
+
+@theme {
+  --grid-template-columns-auto: repeat(auto-fill, minmax(200px, 1fr));
+}
 
 
- .active hr{
+
+
+.active hr{
     @apply block
  }
-
-
 
  /* remove this to add scroller in main page   & also remove in SpecialityMenu.jsx */
  ::-webkit-scrollbar{    
